Capston/project_2/project_2.sdk/.metadata/.plugins/org.eclipse.cdt.ui/test_bsp_xsysmon_intr_printf_example_1.build.log
08:57:53 **** Incremental Build of configuration Debug for project test_bsp_xsysmon_intr_printf_example_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/xsysmon_intr_printf_example.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xsysmon_intr_printf_example.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../test_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/xsysmon_intr_printf_example.d" -MT"src/xsysmon_intr_printf_example.o" -o "src/xsysmon_intr_printf_example.o" "../src/xsysmon_intr_printf_example.c"
../src/xsysmon_intr_printf_example.c: In function 'main':
../src/xsysmon_intr_printf_example.c:115:18: error: 'XPAR_FABRIC_SYSTEM_MANAGEMENT_WIZ_0_IP2INTC_IRPT_INTR' undeclared (first use in this function)
 #define INTR_ID  XPAR_FABRIC_SYSTEM_MANAGEMENT_WIZ_0_IP2INTC_IRPT_INTR
                  ^
../src/xsysmon_intr_printf_example.c:115:18: note: in definition of macro 'INTR_ID'
 #define INTR_ID  XPAR_FABRIC_SYSTEM_MANAGEMENT_WIZ_0_IP2INTC_IRPT_INTR
                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xsysmon_intr_printf_example.c:115:18: note: each undeclared identifier is reported only once for each function it appears in
 #define INTR_ID  XPAR_FABRIC_SYSTEM_MANAGEMENT_WIZ_0_IP2INTC_IRPT_INTR
                  ^
../src/xsysmon_intr_printf_example.c:115:18: note: in definition of macro 'INTR_ID'
 #define INTR_ID  XPAR_FABRIC_SYSTEM_MANAGEMENT_WIZ_0_IP2INTC_IRPT_INTR
                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/xsysmon_intr_printf_example.o] ¿À·ù 1

08:57:54 Build Finished (took 660ms)

